--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,4 +61,12 @@
             android:layout_height="wrap_content"
             android:textSize="20sp" />
 
+
+    <TextView
+            android:id="@+id/tv_rssi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
+
+
 </LinearLayout>
